# first-yang-projcect

./: a.txt.txt  from bs4 import BeautifulSoup.py  import sqlite3.py  test1.ipynb  test2.py
나눔스퀘어/Modules/: dec_aac-config.cmake  dec_hevc-config.cmake  decrypt_aes_ctr-config.cmake  demo_dec_aac-config.cmake  demo_dec_hevc-config.cmake  demo_decrypt_aes_ctr-config.cmake  demo_demux_mp2-config.cmake  demo_demux_mp4-config.cmake  demo_demux_mxf-config.cmake  demo_enc_aac-config.cmake  demo_mfimport-config.cmake  demux_mp2-config.cmake  demux_mp4-config.cmake  demux_mxf-config.cmake  enc_aac-config.cmake  mfimport-config.cmake
나눔스퀘어/include/: auxinfo.h  bufstrm.h  common_aac.h  common_audio.h  common_demux.h  common_video.h  crypto_ca.h  dec_aac.h  dec_hevc.h  decrypt_aes_ctr.h  demux_mp2.h  demux_mp4.h  demux_mxf.h  mcapiext.h  mccallbacks.h  mccolorimetry.h  mccolorspace.h  mcdefs.h  mcfourcc.h  mcindextypes.h  mcmediatypes.h  mcprofile.h  mcruntime.h  mcstreamtypes.h  mctypes.h  mcvesa.h  memory_manager.h  metadata.h  mfimport.h  mfimport_defs.h  mfimport_defs_aac.h  mfimport_defs_avc.h  mfimport_defs_ddp.h  mfimport_defs_dv.h  mfimport_defs_hevc.h  mfimport_defs_mp2v.h  mfimport_defs_mp4v.h  mfimport_defs_mpa.h  mfimport_defs_prores.h  mfimport_defs_vc1.h  (+1 more)
나눔스퀘어/include/CLSID/: aactypes_guid.h  audio_types_guids.h  dec_aac_guid.h  dec_hevc_guid.h  demux_mp2_guid.h  demux_mp4_guid.h  demux_mxf_guid.h  demuxpush_mp2_guid.h  demuxpush_mp4_guid.h  mediatypes_guids.h  misc_types_guids.h  render_fileindex_guid.h  video_types_guids.h
나눔스퀘어/include/ModuleConfig/: CACryptoProvider.h  CACryptoProvider.idl  MCStructTypes.h  MCStructTypes.idl  ModuleConfig.h  ModuleConfig.idl  common_mc.h  dec_aac_mc.h  dec_hevc_mc.h  demux_mp2_mc.h  demux_mp4_mc.h  demux_mxf_mc.h  demuxpush_mp2_mc.h
나눔스퀘어/include/mcruntime/: common.h  threadpool.h
나눔스퀘어/lib/: demo_dec_aac.lib  demo_dec_hevc.lib  demo_decrypt_aes_ctr.lib  demo_demux_mp2.lib  demo_demux_mp4.lib  demo_demux_mxf.lib  demo_mfimport.lib
나눔스퀘어/samples/bufstream/: buf_direct.c  buf_direct.h  buf_file.c  buf_file.h  buf_hls.c  buf_hls.h  buf_idx.c  buf_idx.h  buf_index.c  buf_index.h  buf_mem.c  buf_mem.h  buf_mpd_file.c  buf_mpd_file.h  buf_mzl.c  buf_mzl.h  buf_null.c  buf_null.h  buf_rlbn.c  buf_rlbn.h  buf_rw.c  buf_rw.h  buf_single.c  buf_single.h  buf_subtitle.h  buf_subtitle_write.c  buf_tmp_file.c  buf_tmp_file.h  buf_vxml.c  buf_vxml.h  buf_wave.h  buf_wave_read.c  buf_wave_write.c  buf_xml.c  buf_xml.h  meta_file.c  meta_file.h
나눔스퀘어/samples/common/: mcui.icns  sample_common_args.cpp  sample_common_args.h  sample_common_misc.cpp  sample_common_misc.h
나눔스퀘어/samples/common_ds/: imodcfg_utils.cpp  imodcfg_utils.h  mcdsutils.cpp  mcdsutils.h
나눔스퀘어/samples/common_sr/: ext_io_api.cpp  ext_io_api.h
나눔스퀘어/samples/decoder/sample_dec_aac/: CMakeLists.txt  sample_dec_aac.cpp  sample_dec_aac.rc  samples.cmake
나눔스퀘어/samples/decoder/sample_dec_hevc/: CMakeLists.txt  command_line.cpp  command_line.h  configuration.cpp  configuration.h  d3d_base.h  decoder.cpp  decoder.h  helper.cpp  helper.h  hevcdec.cfg  latencies.cpp  misc.cpp  misc.h  sample_dec_hevc.cpp  sample_dec_hevc.rc  stream_info.h  unicode_tools.cpp  unicode_tools.h
나눔스퀘어/samples/decoder/sample_dec_hevc/latency/: application.h  console.h  defines.h  instance.cpp  instance.h  stages.cpp  stages.h  stream.cpp  stream.h  timings.h
나눔스퀘어/samples/decoder/sample_dec_hevc/usecase/: basic.c  basic_d3d9.cpp  basic_deinterlacing.cpp  basic_demo.cpp  basic_external_threadpool.cpp  callbacks.cpp  d3d11.hlsl  hdr.cpp  insert_aud_nut.cpp  pts.cpp  render_d3d11.cpp  render_d3d9.cpp
나눔스퀘어/samples/demuxer/sample_demux_mp2_buffer/: CMakeLists.txt  keys.ini  sample_demux_mp2_buffer.cpp  sample_demux_mp2_buffer.rc
나눔스퀘어/samples/demuxer/sample_demux_mp2_file/: CMakeLists.txt  company.h  sample_demux_mp2_file.cpp  sample_demux_mp2_file.rc
나눔스퀘어/samples/demuxer/sample_demux_mp2_growing_file/: CMakeLists.txt  sample_demux_mp2_growing_file.cpp  sample_demux_mp2_growing_file.rc
나눔스퀘어/samples/demuxer/sample_demux_mp4_file/: CMakeLists.txt  sample_demux_mp4_file.cpp  sample_demux_mp4_file.rc  version.rc
나눔스퀘어/samples/demuxer/sample_demux_mp4_push/: CMakeLists.txt  sample_demux_mp4_push.cpp  sample_demux_mp4_push.rc  versioninfo.h
나눔스퀘어/samples/demuxer/sample_demux_mp4_push_cenc/: CMakeLists.txt  sample_demux_mp4_push_cenc.cpp  sample_demux_mp4_push_cenc.rc
나눔스퀘어/samples/demuxer/sample_demux_mxf/: CMakeLists.txt  dm_reader.cpp  dm_reader.h  sample_demux_mxf.cpp  sample_demux_mxf.rc
나눔스퀘어/samples/demuxer/sample_mfimport_seek/: CMakeLists.txt  sample_mfimport_seek.cpp  sample_mfimport_seek.rc
나눔스퀘어/samples/demuxer/sample_mfimport_stream/: CMakeLists.txt  mc_fixup_bundle.cmake  sample_mfimport_stream.cpp  sample_mfimport_stream.rc
나눔스퀘어/samples/demuxer/sample_mfimport_stream_info/: CMakeLists.txt  private_binary_data.cpp  private_binary_data.h  sample_mfimport_stream_info.cpp  sample_mfimport_stream_info.rc
나눔스퀘어/samples/directshow/sample_demux_mp2_file_ds/: CMakeLists.txt  sample_demux_mp2_file_ds.cpp  sample_demux_mp2_file_ds.rc
나눔스퀘어/samples/directshow/sample_demux_mxf_file_ds/: CMakeLists.txt  sample_demux_mxf_file_ds.cpp  sample_demux_mxf_file_ds.rc
나눔스퀘어/samples/strmbase/: CMakeLists.txt  mcbuildng.xml  wxdebug.cpp
